--- a/scss/components/index/_section-banner.scss
+++ b/scss/components/index/_section-banner.scss
@@ -1,12 +1,15 @@
  .section-banner {
+    margin-right: auto;
+    margin-left: auto;
+    max-width: 1600px;
     padding-top: 200px;
     padding-bottom: 200px;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4),
-     rgba(47, 48, 58, 0.4)), url("../../../images/Image.jpg");
+     rgba(47, 48, 58, 0.4)), url("../images/Image.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-color: $main-text-color;
- } 
+} 
 
 .section-banner__title {
     width: 696px;
@@ -52,9 +55,9 @@
     background-color: #188ce8;
 }
 
-.overlay {
-    background-color: rgba(47, 48, 58, 0.4);
-    max-width: 1600px;
-    margin-left: 0;
-    margin-right: 0;
-}
+// .overlay {
+//     background-color: rgba(47, 48, 58, 0.4);
+//     max-width: 1600px;
+//     margin-left: 0;
+//     margin-right: 0;
+// }
