--- a/scss/components/index/_section-about.scss
+++ b/scss/components/index/_section-about.scss
@@ -6,6 +6,7 @@
 
 .section-about__list {
     display: flex;
+    list-style: none;
     padding: 0px;
     margin: 0px;
     justify-content: space-between;
